== v0.10.2 / 2017-10-11

* Fix build issues on Mac OS.
* Gmime 2 used weird timezone for sent email.
* Add Meson build system as alternative.

== v0.10.1 / 2017-09-24

* Fix compilation errors against older versions of notmuch and gmime.

== v0.10 / 2017-09-21

* Support GMime 3 with backwards compatability with GMime 2. This orients us
  towards GMime 3, and support for GMime 2 will be dropped in the future.

* Attach messages by mids with 'A' in new emails.

* Colorful tags in tag editor and in searching

* Tags in the tag editor is now separated by spaces (comma still works)

* New configuration option 'signature_separate' determines if inline
  signatures will be separated from the message by a line containing '-- '.

* Configurable query associated with account can be used to select account as
  From: when replying or forwarding e-mail.

* Default clipboard target: CLIPBOARD since this is the only one accessible by keyboard
  in GTK.

* Select target for yank operations with '"'

* Track focus changes manually

== v0.9.1 / 2017-04-30

* Support old vte3.
* Support old _st versions on Arch.

== v0.9 / 2017-04-28

* Drop use of old deprecated non _st functions, use their new names. Will
  require 0.24 or newer.

* No longer support pre-lastmod notmuches.

* Catch missing content errors for messages, not fail.

* Wait and block R/O database opening, not fail.

* Defer changed_thread events on thread-index while still loading.

* Do not update tags in thread-view when not ready.

* configuration option thread_view.expand_flagged determines whether flagged
  messages are expanded by default.

* Better handle poll thread. Make sure to clean up connections here and in send_message.

* Polling can be cancelled with C-c in main window.

* Archive or close thread and then directly open next or next unread thread
  in originating thread-index.

== v0.8 / 2017-03-17

* New logo and icons by Elio Qoshi ( http://patreon.com/ura )

* Run hook for thread-view (Hugo Roy)
