@@ -1,3 +1,7 @@
+==
+
+* Move icons in thread-index to tag line
+
 == v0.10.2 / 2017-10-11
 
 * Fix build issues on Mac OS.
